# dircast

./: .envrc  .gitignore  Cargo.toml  shell.nix
src/: main.rs
templates/: login.html  search.html  styles.css
